# rad_analysis

./: CMakeLists.txt  JLab_macro_handler.sh  Makefile  Makefile_hallRad  README.txt  README_hallRad.txt  README_swif.txt  Skyshine_rad_calc.C  ana.sh  example_plotConfigRatios_csv.csv  hallRadiation.cc  handler.sh  jlabSubmit.py  jlabSubmit_cameron.py  jlabSubmit_hallrad.py  lg_macro_handler.sh  list_submit.sh  ls_mod.sh  macro_handler.sh  merger.sh  mollerMother_base.gdml  move_and_analysis.sh  pe.cc  petypes.hh  plotMultConfigRatios.C  pruneTree.c  pruneTreeEnvelope  pruneTreeEnvelope.c  pruneTreeLGtest.c  pruneTreePE.c  rad_dose.cc  rad_dose_18M.cc  rad_dose_1M.cc  rad_dose_NEW.cc  rad_dose_cip.cc  rad_dose_official.cc  rad_dose_old.cc  rad_dose_prex.cc  rad_dose_v2.cc  remolltypes.hh  (+3 more)
